envoy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-envoy
  labels:
    app: todo-envoy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-envoy
  template:
    metadata:
      labels:
        app: todo-envoy
    spec:
      containers:
      - name: todo-envoy
        image: zgrpc-go-professionals:envoy-proxy
        imagePullPolicy: Never
        ports:
        - name: grpc
          containerPort: 50051
